2003-07-16  Jerry James  <james@xemacs.org>

	* window-xemacs.el (restore-saved-window): Follow first-hchild and
	first-vchild links even when next-child is nil.

2003-07-06  Adrian Aichner  <adrian@xemacs.org>

	* package-get.el (package-get-package-index-file-location): Handle
	missing "EMACSPACKAGEPATH" environment variable.

2003-07-05  Adrian Aichner  <adrian@xemacs.org>

	* package-admin.el (package-admin-find-top-directory): Simplify
	directory comparisions and fix substring errors on short path
	components.
	* package-get.el (package-get-package-index-file-location):
	Default to first component of "EMACSPACKAGEPATH", if set.

2003-06-17  Stephen J. Turnbull  <stephen@xemacs.org>

	* bytecomp.el (byte-compile-lambda): Discard docstring only if it
	is not also the value of the lambda.

2003-06-13  Adrian Aichner  <adrian@xemacs.org>

	* setup-paths.el (paths-emacs-root-p): Don't insist in lib-src
	directory on 'windows-nt, which currently does not have it.

2003-06-11  Adrian Aichner  <adrian@xemacs.org>

	* font-lock.el (lisp-font-lock-keywords-1): Only NAME, not NAME(
	to appear in font-lock-function-name-face.

2003-06-01  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.14 "cassava" is released.

2003-05-22  Stephen J. Turnbull  <stephen@xemacs.org>

	* autoload.el (autoload-featurep-protect-autoloads):
	Make the error message say which sym was checked.

2003-05-16  Stephen J. Turnbull  <stephen@xemacs.org>

	* subr.el (split-string): Update dox, tweak logic, to synch to GNU.

2003-05-15  Steve Youngs  <youngs@xemacs.org>

	* package-get.el (package-get-package-index-file-location): New,
	so it is possible to specify a location for the index file.
	(package-get-locate-index-file): Use it.
	(package-get-maybe-save-index): Ditto.
	(package-get-user-index-filename): Remove.

2003-05-14  Steve Youngs  <youngs@xemacs.org>

	* package-get.el (package-get-require-signed-base-updates): Turn
	the PGP verification code back on.
