@@ -1,3 +1,8 @@
+2003-07-18  Stephen J. Turnbull  <stephen@xemacs.org>
+
+	* derived.el (derived-mode-merge-syntax-tables): Reverse map
+	logic.  Fixes "do-nothing" bug.
+
 2003-07-16  Jerry James  <james@xemacs.org>
 
 	* window-xemacs.el (restore-saved-window): Follow first-hchild and
